--- a/website/staticFiles/css/main.css
+++ b/website/staticFiles/css/main.css
@@ -5,30 +5,55 @@ body {
     background-attachment: fixed;
     background-size:100% 100%;
     text-align:center;
-	padding: 20px;
+	padding: 7px;
 	color:white;
 }
 
 h1 {
-	font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
+	font-family: 'VT323', monospace;
 	font-size: 50px;
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 500;
 	line-height: 26.4px;
 	text-align:center;
-	padding: 20px;
+	padding: 7px;
 	color:white;
 }
+
 h3 {
-	font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
+	font-family: 'VT323', monospace;
 	font-size: 24px;
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 500;
 	line-height: 15.4px;
 	text-align:center;
-	padding: 20px;
+	padding: 5px;
+	color:white;
+}
+
+h4 {
+	font-family: 'VT323', monospace;
+	font-size: 22px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 15.4px;
+	text-align:center;
+	padding: 5px;
+	color:white;
+}
+
+h6 {
+	font-family: 'VT323', monospace;
+	font-size: 17px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 15.4px;
+	text-align:center;
+	padding: 7px;
 	color:white;
 }
 
@@ -37,7 +62,7 @@ img {
 }
 
 p {
-	font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
+	font-family: 'VT323', monospace;
 	font-size: 14px;
 	font-style: normal;
 	font-variant: normal;
@@ -45,10 +70,11 @@ p {
 	line-height: 20px;
 	color:white;
 	text-align:center;
-	padding: 20px;
+	padding: 5px;
 }
+
 blockquote {
-	font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
+	font-family: 'VT323', monospace;
 	font-size: 21px;
 	font-style: normal;
 	font-variant: normal;
@@ -56,10 +82,16 @@ blockquote {
 	line-height: 30px;
 }
 pre {
-	font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
+	font-family: 'VT323', monospace;
 	font-size: 13px;
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 400;
 	line-height: 18.5714px;
+}
+
+.date
+{
+	border: 1px groove white;
+    outline-color: white;
 }
